# ChangeLog for media-libs/alsa-lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.295 2009/12/09 14:58:16 jer Exp $

  09 Dec 2009; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.20-r1.ebuild,
  alsa-lib-1.0.21.ebuild, alsa-lib-1.0.21a.ebuild:
  Seems to work fine without this horrible hack.

  13 Oct 2009; Raúl Porcel <armin76@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  ia64/sh/sparc stable wrt #280464

  19 Sep 2009; Markus Meier <maekke@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  arm stable, bug #280464

*alsa-lib-1.0.21a (13 Sep 2009)

  13 Sep 2009; Peter Alfredsen <loki_val@gentoo.org>
  +alsa-lib-1.0.21a.ebuild:
  Bump. Bug 284716.

  05 Sep 2009; Brent Baude <ranger@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  Marking alsa-lib-1.0.20-r1 ppc64 stable for bug 280464

*alsa-lib-1.0.21 (31 Aug 2009)

  31 Aug 2009; <chainsaw@gentoo.org> +alsa-lib-1.0.21.ebuild:
  Version bump, removes several deprecated functions. Besides that, mostly
  bug fixes and new drivers.

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org>
  alsa-lib-1.0.20-r1.ebuild:
  Stable on alpha, bug #280464

  17 Aug 2009; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  Stable for HPPA (bug #280464).

  14 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  alsa-lib-1.0.20-r1.ebuild:
  stable x86, bug 280464

  09 Aug 2009; nixnut <nixnut@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  ppc stable #280464

  05 Aug 2009; <chainsaw@gentoo.org> alsa-lib-1.0.20-r1.ebuild:
  Early stable on AMD64 as requested by Samuli Suominen
  <ssuominen@gentoo.org> in bug #280464. Tested with a Realtek ALC269 on a
  Fujitsu-Siemens Lifebook S6420 with USE="python -alisp -debug -doc".

  01 Aug 2009; Steve Dibb <beandog@gentoo.org> alsa-lib-1.0.17a.ebuild,
  alsa-lib-1.0.19.ebuild, -alsa-lib-1.0.20.ebuild,
  alsa-lib-1.0.20-r1.ebuild:
  Drop midi use flag, bug 272659
