@@ -1,12 +1,8 @@
-DIST alsa-lib-1.0.17a.tar.bz2 789428 RMD160 ff4c8478bbc421225628419e4ffcb10be47c7826 SHA1 b79a6ee7040a59df5b5c066aced517881495fa87 SHA256 ace3d9c57eae65c7f292704b49c3806a1f90ce2cdeb4aca1e5abf021127ad3ed
-DIST alsa-lib-1.0.19.tar.bz2 792682 RMD160 0ba7f8b1bd311fd9adc7cb1f80e2d3b23b1b303a SHA1 d1e320cad0ef902db2417de1c3520fc19af0af32 SHA256 32ee26d93a25963fdc49b4b5ccd014749d675e33f419022c646a61c31a4a2886
 DIST alsa-lib-1.0.20.tar.bz2 794728 RMD160 8e0b48367abdd9d5746d2dc537014b1449e65e05 SHA1 0e6acce4301a4b3924e268a78e8c979a55cc8f88 SHA256 15f8d0eef1da10c62136107e7b585bc8beb9c9e9b7ad177654097f8c15e57a63
-DIST alsa-lib-1.0.21.tar.bz2 808252 RMD160 b92732e73d5d2934d3ab627d62a2439519446a61 SHA1 cac69df85692ac407c4c80e7ca7a016ee8f35918 SHA256 ab6c40e4f694284d249841075458bbef77ffa0d06561fd847548c28082a79925
 DIST alsa-lib-1.0.21a.tar.bz2 808475 RMD160 38e615c25a93f4529f06e079584d379439ed9600 SHA1 49032964d22404455f3173629f271324bd8af211 SHA256 a6ce09afadc5428b09667cef32f7eba4ce0ea45aca27819edbe188e076d70074
-EBUILD alsa-lib-1.0.17a.ebuild 2796 RMD160 95da439eefac8ca9a8f9f29f5c55793557b21bb1 SHA1 afc1a897dcaded3be2cdb6f9685edd8b67d5817d SHA256 30344d72950ef2e0f63ee597b4de591359320a477396f3383bf7f87078365628
-EBUILD alsa-lib-1.0.19.ebuild 2795 RMD160 bdb49c514c49820f32912adbec49e7c1ffa72514 SHA1 4565d6a61a5147270cb5dca43f8f46ba7c297424 SHA256 ce2776cd7672a7790a7baec39919f99c1a088289a6fb2d2d09dd29bf2c544811
+DIST alsa-lib-1.0.22.tar.bz2 808534 RMD160 4dbc3f9550f8ba01535ad3cfd8f0a8140f897e81 SHA1 d3b6c740c23b8d113a8d02da2a9fd61f5d1a8a44 SHA256 03c3e1410e68bae9b8c0d2ef1023b5416b4fd1c7191d52615d633def71e019bb
 EBUILD alsa-lib-1.0.20-r1.ebuild 2714 RMD160 ee323fca65305b9cefb3fd78bb3717d0b2605b33 SHA1 86954782cfd30d70dae26c09b3d4a78bd75496a6 SHA256 77281aee8ab43961470801d2d8cbc2f0086debd2b11dffe7dd44b4b1b9eac29a
-EBUILD alsa-lib-1.0.21.ebuild 2410 RMD160 c1abf521a2d065f6afa7f06eb6efb117ea97560c SHA1 ab72b18d658c56cc1508af83f5c4135eb93e9113 SHA256 e67e8c0526bf794183893c321bbb51e2d80f5c90107f3d9c21c04ef1214e38a9
 EBUILD alsa-lib-1.0.21a.ebuild 2423 RMD160 b9eb0694f19a4073a6804219c2d6dfd2682de6f1 SHA1 befa5c62e791f70211cb15602b2878a4fb62d1af SHA256 145ffa5434d068d1eeb2c6610d8ca925648703583deda16f36a3c6983b53b6a6
-MISC ChangeLog 43580 RMD160 d69f878ff8131f45a16cff78d6773aa556a2dce9 SHA1 c3324712c9ac8cb74005d3b16988b7f75e625531 SHA256 f22e797579d26451c38af2e4872083e7f5649f665290b404f727bb027490908f
+EBUILD alsa-lib-1.0.22.ebuild 2414 RMD160 169d100d55846566315cb42d5273796b49e19a30 SHA1 46aa6406514d634aef811f5a97d56d0945af0446 SHA256 e58269d369d583e2592356be57e1ef8325eff2ca84f3a39472fe0e26b215ecbf
+MISC ChangeLog 43716 RMD160 820c125d91eb2c827e4f4c6743bc911385be4d48 SHA1 da3eedb90a06030bee015f8a1a6f28528dedd371 SHA256 16b36997ad19bf428e6a9c430ac75c077d8d4364279669c3d07e5777723c794f
 MISC metadata.xml 349 RMD160 d53ee4e7e914ec155222ead9a6118ee8907b775a SHA1 20344a00a6f51ddc0dc4b8e0b09c8a21ba91cc4a SHA256 68b0f168985d3b03a0997eb9f9338662d1584dc7fe7ea35ae8f7564e5e20c2e3
