@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/alsa-lib-1.0.19.ebuild,v 1.8 2009/08/01 14:44:02 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/alsa-lib-1.0.22.ebuild,v 1.1 2010/01/07 17:10:51 beandog Exp $
 
 inherit eutils libtool
 
@@ -50,9 +50,6 @@ src_compile() {
 	local myconf
 	use elibc_uclibc && myconf="--without-versioned"
 
-	# needed to avoid gcc looping internaly
-	use hppa && export CFLAGS="-O1 -pipe"
-
 	econf \
 		--enable-static \
 		--enable-shared \
@@ -85,12 +82,6 @@ src_install() {
 }
 
 pkg_postinst() {
-	ewarn "Starting from alsa 1.0.11_rc3 the configuration for dmix is changed."
-	ewarn "Leaving around old asound.conf or ~/.asoundrc might make all apps"
-	ewarn "using ALSA output crash."
-	ewarn "Note that dmix output is enabled by default on the 'default' device"
-	ewarn "since ALSA 1.0.9."
-	elog ""
 	elog "Please try in-kernel ALSA drivers instead of the alsa-drivers ebuild."
 	elog "If alsa-drivers works for you where a *recent* kernel does not, we want "
 	elog "to know about this. Our e-mail address is alsa-bugs@gentoo.org"
